modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/MainFuncWithoutParams.bal
package samples.parser.invalidSyntax;

function main {
	int b;
	reply m;
}
